# mariia-hub-unified

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.production  .env.production.example  .env.staging  .env.stripe.bmbeauty  .env.vercel  .gitignore  .nycrc.json  .prettierignore  .prettierrc  ACCESSIBILITY_IMPLEMENTATION_GUIDE.md  API_ECOSYSTEM_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  APP_STORE_DEPLOYMENT_COMPLETE.md  ASSISTIVE_TECHNOLOGY_IMPLEMENTATION_GUIDE.md  CHANGELOG.md  CI-CD-IMPLEMENTATION-GUIDE.md  CI-CD-IMPLEMENTATION.md  CLAUDE.md  CONTAINER_ORCHESTRATION_GUIDE.md  CONTRIBUTING.md  DEVOPS_AUTOMATION_PLATFORM_SUMMARY.md  Dockerfile  Dockerfile.dev  ENVIRONMENT_MANAGEMENT_README.md  FEEDBACK_SYSTEM_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_REPORT.md  INCLUSIVE_DESIGN_IMPLEMENTATION_GUIDE.md  INFRASTRUCTURE_AUDIT.md  INFRASTRUCTURE_IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_README.md  KNOWLEDGE_BASE_README.md  LUXURY_COMPONENT_LIBRARY_SUMMARY.md  LUXURY_SUPPORT_DOCUMENTATION.md  MOBILE_ANALYTICS_IMPLEMENTATION.md  MOBILE_SECURITY_IMPLEMENTATION.md  NAMING_CONVENTIONS.md  (+42 more)
.archive/docker/: Dockerfile.lighthouse  Dockerfile.playwright  Dockerfile.test  docker-compose.blue-green.yml  docker-compose.override.yml  docker-compose.prod.yml  (+2 more)
.github/: README.md  pull_request_template.md
.husky/: pre-commit
.storybook/: main.ts  preview.ts
accessibility-audit-results/: PROJECT_COMPLETION_SUMMARY.md  README.md  accessibility-audit-report.html  accessibility-audit-results.json  accessibility-fixes.json  accessibility-statement.md  certification-applications.md  compliance-evidence.md  comprehensive-accessibility-report.html  comprehensive-accessibility-results.json  continuous-improvement-program.md  executive-summary.md  governance-framework.md  industry-award-applications.md  testing-methodology.md
android/: README.md  build.gradle.kts
app-store-assets/: SCREENSHOTS_SPECIFICATIONS.md
aso/: KEYWORD_RESEARCH.md
config/: eslint.config.js  jest.a11y.config.js  playwright.config.ts  vite.config.security.ts  vite.config.ts  vitest.config.luxury.ts  vitest.config.ts
desktop-automation/: booksy-automator.py
docs/: ACCESSIBILITY_AUDIT_ADDITION.md  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  ACCESSIBILITY_TESTING_GUIDE.md  ACCESSIBILITY_USER_TESTING_FRAMEWORK.md  ACCESS_CONTROL_POLICIES.md  AGENT_PROMPTS.md  AI_AGENT_PROMPTS_PARALLEL_DEVELOPMENT.md  AI_INTEGRATION_2025_GUIDE.md  API_SECURITY_IMPLEMENTATION_GUIDE.md  ARCHITECTURE_GUIDE.md  ATOMIC_BOOKING_IMPLEMENTATION_GUIDE.md  BM_BEAUTY_STRIPE_SETUP.md  BOOKSY_API_RESEARCH.md  BOOKSY_AUTOMATION_GUIDE.md  BOOKSY_COMPLETE_SOLUTION.md  BOOKSY_INTEGRATION_COMPLETE_GUIDE.md  BOOKSY_INTEGRATION_GUIDE.md  BOOKSY_MIGRATION_GUIDE.md  BOOKSY_SOLUTION_SUMMARY.md  BOOKSY_SYNC_ALTERNATIVES.md  BUSINESS_LOGIC_DOMAIN.md  BUSINESS_LOGIC_VALIDATION.md  C2PA_API_DOCUMENTATION.md  C2PA_IMPLEMENTATION_GUIDE.md  CAPACITY_MANAGEMENT_GUIDE.md  CI_CD_GUIDE.md  CLAUDE_CODE_CLEANUP_EXECUTION.md  CODE_QUALITY_METRICS_AUDIT.md  COMMUNICATION_HUB_API.md  COMMUNICATION_HUB_SETUP.md  COMMUNICATION_INTEGRATION.md  COMPLETE_API_LAYER_GUIDE.md  COMPLETE_FEATURE_TODO_LIST.md  COMPONENT_LIBRARY.md  COMPREHENSIVE_BRAND_STYLE_GUIDE.md  COMPREHENSIVE_REPO_AUDIT_PROMPT_FINAL.md  COMPREHENSIVE_SECURITY_SUMMARY.md  COMPREHENSIVE_TODO_LIST.md  CONSENT_MANAGEMENT_COMPLIANCE.md  CONSENT_SYSTEM_IMPLEMENTATION_GUIDE.md  (+80 more)
iOS/: Configuration.xcconfig  DEPLOYMENT_GUIDE.md  Info.plist  Package.swift  README.md
monitoring/: README.md
openspec/: project.md
public/: _headers  image-mapping.json  manifest.json  sitemap.xml  sw.js
scripts/: accessibility-audit.js  add-messaging-types.ts  auto-scale-monitor.py  comprehensive-accessibility-test.js  comprehensive-backup-dashboard.sh  comprehensive-security-verification.sh  continuous-performance-testing.js  create-pln-products.js  database-backup-disaster-recovery.sh  database-maintenance.sql  emergency-kill-switch.js  enhanced-security-audit.sh  fix-accessibility-issues.js  multi-cloud-backup-strategy.sh  optimize-database-performance.sql  optimize-images-webp.js  optimize-images.js  performance-budget-validation.js  pre-production-cleanup.sh  production-database-optimization.sql  production-deployment-optimization.sh  production-readiness-verification.sh  redis-cluster-manager.py  run-repo-cleanup-audit.js  secure-credential-rotation.yml  security-audit-and-fixes.sql  security-audit.cjs  security-scan.js  security-testing-automation.js  seed-preview-data.ts  seed-staging-data.ts  setup-review-storage.sql  setup-staging-domain.sh  setup-supabase-staging.sh  setup-test-db.sql  start-stripe-webhooks.sh  supabase-production-optimization.sh  test-analytics-dashboard.js  test-data-manager.js  test-monitoring.js  (+3 more)
sdk/: IMPLEMENTATION_SUMMARY.md  README.md
sdk/python/: README.md  pyproject.toml
sdk/python/mariia_hub/: __init__.py  exceptions.py
security-reports/: security-report-1761179053937.json  security-report-1761239019137.json
src/: App-minimal.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml
(+1867 files in other folders)
